# telegram-bot-template

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .env  Makefile  README.md  __init__.py  main.py  models.py  pyproject.toml  settings.py
{{cookiecutter.project_slug}}/filters/: auth.py
{{cookiecutter.project_slug}}/middlewares/: message_logging_middleware.py
{{cookiecutter.project_slug}}/utils/: loguru_logging.py  tortoise_orm.py
