[tool.poetry]
name = "telegram-bot-template"
version = "0.2.0"
description = ""
authors = ["Mykola Solodukha <mykola@mykola.fyi>"]
readme = "README.md"
packages = [{include = "telegram_bot_template"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
